--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Juicy",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "luxon": "^1.27.0"
   }
 }
