--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "Juicy",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "discord.js": "^12.5.3",
     "luxon": "^1.27.0"
