--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "discord.js": "^13.0.1",
     "luxon": "^1.27.0",
-    "mongoose": "^6.1.4"
+    "mongoose": "^6.1.4",
+    "ms": "^2.1.3"
   }
 }
