--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^13.0.1",
     "luxon": "^1.27.0",
     "mongoose": "^6.1.4",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "pretty-ms": "^7.0.1"
   }
 }
